--- a/practiceCode/盒子水平垂直居中.html
+++ b/practiceCode/盒子水平垂直居中.html
@@ -19,7 +19,6 @@
             height: 100%;
             background-color: black;
 
-            position: relative;
         }
 
         .son{
@@ -27,10 +26,8 @@
             height: 100px;
             background-color: white;
 
-            position: absolute;
-            left: 50%;
-            top: 50%;
-            transform: translate(-50px,-50px);
+            margin: 0 auto;
+            transform: translateY(250px);
         }
     </style>
 </head>
