this初步记录/手写bind

--- a/practiceCode/new.html
+++ b/practiceCode/new.html
@@ -21,5 +21,6 @@
     }
     console.log(new Cap('celesteliao'));
     console.log(_new(Cap,'celesteliao'));
+    // new 不能调用非constructor，箭头函数就是非constructor，无论它有没有prototpye.constructor
 </script>
 </html>
