--- a/practiceCode/test.html
+++ b/practiceCode/test.html
@@ -6,12 +6,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
+        *{
+            margin: 0;
+        }
 
+        body{
+            height: 2000px;
+        }
+
+        .father{
+            width: 400px;
+            height: 400px;
+            background-color: black;
+            /* overflow: hidden; */
+        }
+
+        .children{
+            width: 100px;
+            height: 100px;
+            background-color: indigo;
+            margin: 50%;
+            transform: translateY(-50%);
+        }
     </style>
 </head>
 <body>
-    
+    <div class="father">
+        <div class="children">
+        </div>
+    </div>    
 </body>
 <script src="./test.js"></script>
-<script src="./bind.js"></script>
 </html>
