面经补充/知识点补充

--- a/practiceCode/test.html
+++ b/practiceCode/test.html
@@ -7,34 +7,17 @@
     <title>Document</title>
     <style>
         *{
+            padding: 0;
             margin: 0;
         }
 
-        body{
-            height: 2000px;
-        }
-
-        .father{
-            width: 400px;
-            height: 400px;
-            background-color: black;
-            /* overflow: hidden; */
-        }
-
-        .children{
-            width: 100px;
-            height: 100px;
-            background-color: indigo;
-            margin: 50%;
-            transform: translateY(-50%);
-        }
     </style>
 </head>
 <body>
-    <div class="father">
-        <div class="children">
-        </div>
-    </div>    
 </body>
+
 <script src="./test.js"></script>
+<script>
+    
+</script>
 </html>
