--- a/practiceCode/test.html
+++ b/practiceCode/test.html
@@ -10,10 +10,25 @@
             padding: 0;
             margin: 0;
         }
-
+        
+        .fa{
+            margin-left: 200px;
+            margin-top: 400px;
+            width: 200px;height: 400px;
+            background-color:red
+        }
+        .son{
+            position: relative;
+            width: 50%;
+            height: 50%;
+            background-color:green;
+        }
     </style>
 </head>
 <body>
+    <div class="fa">
+        <div class="son"></div>
+    </div>
 </body>
 
 <script src="./test.js"></script>
