--- a/practiceCode/手写一个Ajax.html
+++ b/practiceCode/手写一个Ajax.html
@@ -37,6 +37,6 @@
         // xhr.readState 属性是返回一个XMLHttpRequest代理当前所处的状态。一共有五种状态
         // DONE表示操作已完成。这意味着数据传输已经彻底完成或失败
     }
-
+// new open setRequestHeader onreadystatechange
 </script>
 </html>
